Persistencia e Retorno dos games salvos melhorado

--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -20,7 +20,7 @@
             android:layout_height="130dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/splash_img" />
+            android:background="@color/inputTextColor"/>
 
         <TextView
             android:id="@+id/tv_gameName"
